// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState appearance='error' 1`] = `
<div
  class="css-3qkzfp"
  data-cy="emptyState"
>
  <div
    class="css-1whabpp"
    data-cy="card"
  >
    <div
      class="css-yy1d4r"
    >
      <div
        class="css-1c71uxj"
        data-cy="spacingBox"
      >
        <h2
          class="rmTextMargins css-1rl5bwh"
          data-cy="headingText2"
        >
          <svg
            aria-label="system-circle-close icon"
            class="css-pgwe9l"
            data-cy="icon"
            height="16"
            preserveAspectRatio="xMinYMin meet"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <use
              href="#system-circle-close"
            />
          </svg>
          <span
            class="css-93yxf5"
            data-cy="spacingBox"
          >
            Heading
          </span>
        </h2>
      </div>
      <div
        class="css-dbyz3d"
        data-cy="spacingBox"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState default 1`] = `
<div
  class="css-3qkzfp"
  data-cy="emptyState"
>
  <div
    class="css-1whabpp"
    data-cy="card"
  >
    <div
      class="css-yy1d4r"
    >
      <div
        class="css-1c71uxj"
        data-cy="spacingBox"
      >
        <h2
          class="rmTextMargins css-1rl5bwh"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-dbyz3d"
        data-cy="spacingBox"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState renders with primary and secondary actions 1`] = `
<div
  class="css-3qkzfp"
  data-cy="emptyState"
>
  <div
    class="css-1whabpp"
    data-cy="card"
  >
    <div
      class="css-yy1d4r"
    >
      <div
        class="css-1c71uxj"
        data-cy="spacingBox"
      >
        <h2
          class="rmTextMargins css-1rl5bwh"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-1tq4izn"
        data-cy="spacingBox"
      >
        Body content
      </div>
      <div
        class="css-mofsq3"
        data-cy="flex"
      >
        <div
          class="css-149ndna"
          data-cy="flexItem"
        >
          <button
            class="css-8g34zf"
            data-cy="secondaryButton"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Secondary
            </span>
          </button>
        </div>
        <div
          class="css-149ndna"
          data-cy="flexItem"
        >
          <button
            class="css-1jip74i"
            data-cy="primaryButton"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Primary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
